crates/pg_syntax/tests/snapshots/postgres_regress/horology@294.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2015-02-11 86000', 'YYYY-MM-DD SSSSS');"
---
SelectStmt@0..60
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..58
    FuncCall@7..58
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..38
        Sconst@20..38 "'2015-02-11 86000'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..58
        Sconst@40..58 "'YYYY-MM-DD SSSSS'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

