crates/pg_syntax/tests/snapshots/postgres_regress/horology@302.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_date('2016 365', 'YYYY DDD');"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..14 "to_date"
      Ascii40@14..15 "("
      AConst@15..25
        Sconst@15..25 "'2016 365'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..37
        Sconst@27..37 "'YYYY DDD'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

