crates/pg_syntax/tests/snapshots/postgres_regress/horology@310.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2012-12-12 12:00 America/New_York'::timestamptz;"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..55
    TypeCast@7..55
      AConst@7..42
        Sconst@7..42 "'2012-12-12 12:00 Ame ..."
      Typecast@42..44 "::"
      TypeName@44..55
        Ident@44..55 "timestamptz"
  Ascii59@55..56 ";"

