crates/pg_syntax/tests/snapshots/postgres_regress/horology@311.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char('2012-12-12 12:00'::timestamptz, 'YYYY-MM-DD HH:MI:SS TZ');"
---
SelectStmt@0..74
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..72
    FuncCall@7..72
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      TypeCast@15..46
        AConst@15..33
          Sconst@15..33 "'2012-12-12 12:00'"
        Typecast@33..35 "::"
        TypeName@35..46
          Ident@35..46 "timestamptz"
      Ascii44@46..47 ","
      Whitespace@47..48 " "
      AConst@48..72
        Sconst@48..72 "'YYYY-MM-DD HH:MI:SS TZ'"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

