crates/pg_syntax/tests/snapshots/postgres_regress/horology@312.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char('2012-12-12 12:00'::timestamptz, 'YYYY-MM-DD SSSS');"
---
SelectStmt@0..67
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..65
    FuncCall@7..65
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      TypeCast@15..46
        AConst@15..33
          Sconst@15..33 "'2012-12-12 12:00'"
        Typecast@33..35 "::"
        TypeName@35..46
          Ident@35..46 "timestamptz"
      Ascii44@46..47 ","
      Whitespace@47..48 " "
      AConst@48..65
        Sconst@48..65 "'YYYY-MM-DD SSSS'"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

